--- a/app/views/appearances/show.html.erb
+++ b/app/views/appearances/show.html.erb
@@ -2,5 +2,6 @@
 <h2>Guest: <%=@appearance.guest.name%></h2>
 <h3>Date of episode: <%=@appearance.episode.date%></h2>
 <h3>Rating: <%=@appearance.rating%></h3>
+<h3>Producer: <%=@appearance.user.username%>
 
 <%=link_to "Edit this page", edit_appearance_path%>
