--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -3,7 +3,9 @@
 <%= form_for @appearance do |f| %>
   <%= f.label :rating %>
   <%= f.number_field :rating, in: (1..5) %>
-  <%= f.collection_select :episode_id, Episode.all, :id, :date %>
-  <%= f.collection_select :guest_id, Guest.all, :id, :name %>
+Date: <%= f.collection_select :episode_id, Episode.all, :id, :date %><br>
+  Guest: <%= f.collection_select :guest_id, Guest.all, :id, :name %><br>
+  Producer: <%= f.collection_select :user_id, User.all, :id, :username %><br>
+
   <%= f.submit %>
 <% end %>
